# IT-Ticket-Project

./: README.md  conftest.py  pytest.ini
.github/workflows/: ci.yml
IT Ticket Project/: .bandit  .gitignore  .pre-commit-config.yaml  README.md  bandit.yaml  config.py  database.py  pyproject.toml  requirements-dev.txt  setup.py  ticket_tester.py  ticketing_app.py  tickets.db  unit_test.py  validators.py
IT Ticket Project/.github/workflows/: bandit-double-scan.yml  precommit.yml  pytest.yml
IT Ticket Project/models/: ticket.py  ticket_model.py
IT Ticket Project/routes/: tickets.py
IT Ticket Project/scripts/: precommit_check.sh
IT Ticket Project/services/: ticket_service.py
IT Ticket Project/templates/: base.html  create_ticket.html  home.html  update_ticket.html
IT Ticket Project/tests/: helpers.py  test_pytest.py  ticket_tester.py  unit_test.py
