[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "it-ticket-project"
version = "0.0.0"
description = "IT Ticket Project package"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "bkeller" } ]

[tool.setuptools.packages.find]
where = ["."]
include = ["models", "routes", "services"]
